# vtc-VaporWare

./: .gitignore  .main.c.swp  .main.h.swp  CMakeLists.txt  Dummy  Makefile  README.md  ReleaseNotes.txt  button.c  button.h  communication.c  communication.h  dataflash.c  dataflash.h  debug.h  defaults.h  display.c  display.h  globals.c  globals.h  helper.c  helper.h  main.c  main.h  menu.c  menu.h  mode-helper.c  mode.h  mode_temp.c  mode_temp.h  mode_volt.c  mode_volt.h  mode_watt.c  mode_watt.h  settings.c  settings.h  settings_helpers.c
example/new_fw/: .main.h.swp  Makefile  ReleaseNotes.txt  button.c  communication.c  dataflash.c  dataflash.h  defaults.h  display.c  display_helper.h  globals.c  globals.h  helper.c  helper.h  main.c  main.h  materials.h  menu.c  menu.h  mode-helper.c  mode.h  mode_temp.c  mode_temp.h  mode_volt.c  mode_volt.h  mode_watt.c  mode_watt.h  settings.c  settings.h  settings_helpers.c
example/new_fw/font/: Font_Large.h  Font_Medium.h  Font_Small.h
example/new_fw/images/: battery.h  ohm.h  short.h  temperature.h
example/new_fw/include/: communication.h  dataflash.h  debug.h  globals.h  mode.h
example/new_fw/src/: main.c  materials.c
example/new_fw/src/display/: display_helper.c
example/new_fw/src/modes/: mode.c  mode_temp.c  mode_volt.c
example/new_fw/src/settings/: settings.c  settings_helpers.c
example/new_fw/src/utils/: button.c  communication.c  helper.c  menu.c
font/: Font_Large.c  Font_Medium.c  Font_Small.c  font_vaporware.h
images/: hot.h  images.c  ohm.h  short.h  temperature.c  watts.h
include/: Atomizer.h  Button.h  Dataflash.h  Display.h  Font.h  Font_Data.h  atomizer_query.h  button.h  dataflash.h  debug.h  display.h  display_helper.h  drawables.h  font_10x18.h  globals.h  helper.h  materials.h  menu.h  mode.h  mode_temp.h  mode_volt.h  mode_watt.h  settings.h  variabletimer.h
make/: Base.mk
space/: alien.c  game.c  game_globals.c  space_res.c
space/include/: alien.h  game.h  game_globals.h  level.h  shot.h  space_res.h
space/levels/: level.c  level1.c  level2.c
src/: globals.c  main.c
src/atomizer/: Atomizer.c
src/display/: Display.c  atomizer_query.c  display.c  display_helper.c  drawables.c
src/display/drawables/: atomizer_drawables.c  battery_drawables.c  modes_drawables.c
src/display/screens/: charging_screen.c  main_screen.c
src/font/: font_10x18.c
src/modes/: mode.c  mode_temp.c  mode_volt.c  mode_watt.c
src/settings/: dataflash.c  settings.c  settings_helpers.c
src/utils/: button.c  communication.c  menu.c  variabletimer.c
tools/: font.c  genfont.sh
vaptris/: vaptris.c
vaptris/include/: vaptris.h
